updates to movement scheduling

--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ td {
     text-align: center;
 }
 
-.plus-minus {
+.convoy-input {
     border: 1px solid #ccc;
     border-radius: 4px;
     width :48px;
