--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html, body, #container {
     overflow: hidden;
 }
 body {
-    padding-top: 100px;
+    padding-top: 50px;
 }
 input[type="radio"], input[type="checkbox"] {
     margin: 0;
@@ -21,6 +21,7 @@ td {
     height: 100%;
     max-width: 100%;
     float: left;
+    position: relative;
 }
 #map {
     width: auto;
@@ -100,11 +101,6 @@ td {
     width: 60px !important;
 }
 
-.sidebar-wrapper {
-    width: 100%;
-    height: 100%;
-    position: relative;
-}
 .sidebar-table {
     position: absolute;
     width: 100%;
@@ -116,17 +112,43 @@ td {
 }
 .statbar-table {
     position: absolute;
-    width: 100%;
-    top: 40px;
+    width:800px;
     overflow: auto;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 10px;
+    max-height: 180px;
+}
+
+.stat-label{
+    font-size: 12px;
+}
+
+
+.navbar-toggle-btn{
+    margin: 10px !important;
+}
+
+#zoom_group{
+    float:right;
+    margin: 10px !important;
+
+}
+
+#stat-heading{
+    border-bottom: 2px solid #ccc;
+    padding-bottom: 5px !important;
+
 }
 
 .nav-footer{
+    padding: 5px;
     min-height:0;
     position:fixed;
-    width: 100%;
+    width: 1000px;
+    left:200px
+}
+.dropdown-menu{
+    text-align: center !important;
+    z-index: 1000;
 }
 
 .leaflet-control-layers {
@@ -143,14 +165,16 @@ td {
     margin-bottom: 0px;
 }
 
-.nav2 {
-    margin-top: 50px;
-    /*height:180px !important*/
-    /*height: 180px;*/
+.statbar {
+    position: relative;
+    height: 0px;
+    /*display: block;*/
+    /*max-height: 100%;*/
+
 }
 
-.stat-row{
-    width: 100%
+#stat-list tr  th{
+    text-align:center;
 }
 
 .navbar-toggle-btn{
@@ -181,8 +205,6 @@ td {
     width: 200px;
     margin:auto;
     display:block;
-    /*margin-left: 50px;*/
-    /*margin-right: 50px;*/
 }
 
 .wrapper {
@@ -210,15 +232,6 @@ input[type=number]::-webkit-outer-spin-button {
     text-align: center;
 }
 
-.stat-table-header {
-    /*padding: 2px !important;*/
-    /*font-size: 12px !important;*/
-    text-align: center;
-}
-
-.stat-cell{
-    width: 50px;
-}
 
 #calc-btn, #run-btn{
     margin-bottom: 5px !important;
@@ -285,9 +298,6 @@ label {
     /*margin: 14px;*/
 /*}*/
 
-#time-slider {
-    width:400px;
-}
 
 
 /*#time-slider2 {*/
@@ -312,15 +322,41 @@ input {
     margin-bottom: 0;
 }
 
+/*#play-pause{*/
+    /*float: right;*/
+    /*!*left: 50px;*!*/
+/*}*/
+
+.navbar-nav{
+    width: 100%;
+}
+
+#time-slider {
+    left:10px;
+    width:350px;
+    margin:5px 0px ;
+}
+
+#speed-input{
+    top: 140px;
+    width: 40px;
+    margin-bottom: 5px;
+    text-align: center;
+    white-space: nowrap !important;
+}
+
 .speed-menu {
-    padding-top: 10px;
-    width: 10px;
-    min-width: 10px;
+    min-width:50px !important;
+    padding: 15px !important;
 }
 
 #speed-slider {
     margin-left: auto;
     margin-right: auto;
+}
+
+.speed-label {
+    color: black !important;
 }
 
 /*.navbar .btn,*/
@@ -330,11 +366,29 @@ input {
     /*!*border: 0;*!*/
 /*}*/
 
-.navbar .nav > li > a.clock {
-    padding: 0 3px 0 3px;
+.navbar .nav > li.dropdown {
+    padding: 0px;
+    left: 460px;
     text-align: center;
-    margin-left:4px;
-    margin-right:4px;
+}
+
+.navbar .nav > li{
+    padding-bottom: 0px;
+}
+
+#date-input{
+    text-align: center;
+}
+
+#timepicker {
+    padding: 0px 20px;
+}
+.bootstrap-datetimepicker-widget{
+    right:auto !important;
+}
+
+#timepicker-input {
+    text-align: center;
 }
 
 .view-notification {
@@ -460,3 +514,78 @@ a.accordion-toggle {
 }
 
 
+
+
+.checkbox {
+    position: relative;
+    /*float:left;*/
+    margin: 10px
+}
+
+.checkbox label {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    position: absolute;
+    /*top: 0;*/
+    /*left: 0;*/
+    border-radius: 4px;
+}
+
+.checkbox label:after {
+    content: '';
+    width: 9px;
+    height: 5px;
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    border: 3px solid #fcfff4;
+    border-top: none;
+    border-right: none;
+    background: transparent;
+    opacity: 0;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
+
+.checkbox label:hover::after {
+    opacity: 0.3;
+}
+
+.checkbox input[type=checkbox] {
+    visibility: hidden;
+    position: relative !important;
+}
+
+.checkbox input[type=checkbox]:checked + label:after {
+    opacity: 1;
+}
+/* end .squaredThree */
+
+.label-text {
+    position: relative;
+    left: 10px;
+}
+
+.input-group-my{
+    padding: 6px 12px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1;
+    color: #555;
+    text-align: center;
+    background-color: #eee;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 1%;
+    white-space: nowrap;
+    vertical-align: middle;
+    display: table-cell;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-right: 0;
+}
+
+.zoom{
+    border: none !important;
+}
