--- a/style.css
+++ b/style.css
@@ -112,14 +112,23 @@ td {
 }
 .statbar-table {
     position: absolute;
-    width:800px;
+    width:1000px;
     overflow: auto;
     padding: 10px;
-    max-height: 180px;
+    max-height: 195px;
+}
+
+.stat-cell-1 {
+    width:75px;
+}
+
+.stat-cell-2 {
+    width:200px;
 }
 
 .stat-label{
     font-size: 12px;
+    margin-top: 5px;
 }
 
 
